@@ -1,3 +1,9 @@
+2007-01-17  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/fatal-prepare.h: Use PTHFCT_CALL to
+	demangle pointer.
+	* csu/libc-start.c: Likewise.
+
 2007-01-16  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/posix/system.c: Remove NO_WAITPID support, it cannot
